[project]
name = "comfyui_comfyroll_customnodes"
description = "Custom nodes for SDXL and SD1.5 including Multi-ControlNet, LoRA, Aspect Ratio, Process Switches, and many more nodes. NOTE: Maintainer is changed to Suzie1 from RockOfFire. [w/Using an outdated version has resulted in reported issues with updates not being applied. Trying to reinstall the software is advised.]"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Comfyroll_CustomNodes"
Icon = ""
